--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -43,13 +43,6 @@ jobs:
       RELEASE_TOKEN: ${{ secrets.RELEASE_TOKEN }}
       TELEGRAM_PROD_CHAT_ID: ${{ secrets.TELEGRAM_PROD_CHAT_ID }}
     steps:
-#      - name: Checkout
-#        uses: actions/checkout@v2
-#      - name: Setup Environment
-#        run: |
-#          bundle install
-#          bundle update fastlane
-#          bundle exec fastlane run clear_derived_data
       - name: Start SwiftUI & UIKit snapshot tests
         run: bundle exec fastlane run_all_snapshot_tests
       - name: Check If Failed
@@ -58,7 +51,7 @@ jobs:
 
   admiral-ui-tests:
     name: UI tests
-    needs: setup
+    needs: snapshot-tests
     runs-on: [self-hosted, main]
     env:
       API_GITHUB_TOKEN: ${{ secrets.API_GITHUB_TOKEN }}
@@ -78,8 +71,8 @@ jobs:
        run: bundle exec fastlane send_build_failed_info issue_name:${{ github.head_ref }} telegram_token:"$TELEGRAM_API_TOKEN" telegram_chat_id:"$TELEGRAM_DEV_CHAT_ID" build_url:"$PUll_NUMBER"
 
   deploy-appCenter-dev:
-    name: Deploy AppCenter Dev
-    needs: setup
+    name: Deploy AppCenter
+    needs: admiral-ui-tests
     runs-on: [self-hosted, main]
     env:
       API_GITHUB_TOKEN: ${{ secrets.API_GITHUB_TOKEN }}
