Fix warnings and errors

--- a/.swiftgen/.admiralswiftui/.swiftgen.symbols.yml
+++ b/.swiftgen/.admiralswiftui/.swiftgen.symbols.yml
@@ -1,8 +1,8 @@
 xcassets:
-    inputs: ../Source/AdmiralSwiftUI/Resources/Symbols.xcassets
+    inputs: ../../Source/AdmiralSwiftUI/Resources/Symbols.xcassets
     outputs:
         templateName: swift5
-        output: ../Source/AdmiralSwiftUI/Resources/Generated/Symbols.swift
+        output: ../../Source/AdmiralSwiftUI/Resources/Generated/Symbols.swift
         params:
             allValues: true
             enumName: SymbolsNew
