--- a/.swiftgen/.admiralswiftui/.swiftgen.images.yml
+++ b/.swiftgen/.admiralswiftui/.swiftgen.images.yml
@@ -1,8 +1,8 @@
 xcassets:
-    inputs: ../Source/AdmiralSwiftUI/Resources/Images.xcassets
+    inputs: ../../Source/AdmiralSwiftUI/Resources/Images.xcassets
     outputs:
         templateName: swift5
-        output: ../Source/AdmiralSwiftUI/Resources/Generated/Images.swift
+        output: ../../Source/AdmiralSwiftUI/Resources/Generated/Images.swift
         params:
             allValues: true
             enumName: ImagesNew
