--- a/.swiftgen/.admiralswiftui/.swiftgen.systemimages.yml
+++ b/.swiftgen/.admiralswiftui/.swiftgen.systemimages.yml
@@ -1,8 +1,8 @@
 xcassets:
-    inputs: ../Source/AdmiralSwiftUI/Resources/SystemImages.xcassets
+    inputs: ../../Source/AdmiralSwiftUI/Resources/SystemImages.xcassets
     outputs:
         templateName: swift5
-        output: ../Source/AdmiralSwiftUI/Resources/Generated/SystemImages.swift
+        output: ../../Source/AdmiralSwiftUI/Resources/Generated/SystemImages.swift
         params:
             allValues: true
             enumName: SystemImagesNew
