--- a/.swiftgen/.admiralswiftui/.swiftgen.images.yml
+++ b/.swiftgen/.admiralswiftui/.swiftgen.images.yml
@@ -1,7 +1,7 @@
 xcassets:
     inputs: ../../Source/AdmiralSwiftUI/Resources/Images.xcassets
     outputs:
-        templateName: swift5
+        templatePath: ../../Templates/Images.stencil
         output: ../../Source/AdmiralSwiftUI/Resources/Generated/Images.swift
         params:
             allValues: true
