--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -9,7 +9,7 @@ on:
 
 jobs:
   setup:
-    name: Setup
+    name: Setup one
     runs-on: [self-hosted, main]
     env:
       API_GITHUB_TOKEN: ${{ secrets.API_GITHUB_TOKEN }}
